If frames are dumped out of the queue, let's at least see what they are.

This shows that the majority of the weird traffic I see here are probe
frames that haven't been sent out, but I can also trigger this condition
by doing ICMP w/ -i 0.3 - enough to trigger the TX during actual scanning,
but not fast enough to stop scanning from occuring.

PR:		kern/163689


git-svn-id: svn+ssh://svn.freebsd.org/base/head@229165 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f